# org-x

./: .gitignore  .rules  AGENTS.md  README.md  components.json  config.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.js  vitest.config.ts
.github/workflows/: rust.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
dev-docs/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
dev-docs/adr/: 001_server-side-filtering.md  detailview-mvvm-refactoring.md  mvvm-listview-refactoring.md
memory-bank/: activeContext.md  productContext.md  progress.md  systemPatterns.md
openspec/changes/migrate-planning-to-openspec/: design.md  proposal.md  tasks.md
openspec/changes/phase-1-table-views/: design.md  proposal.md  tasks.md
src/: app.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  lib.rs  main.rs  orgmode.rs  settings.rs  test_datetime.rs
src-tauri/src/orgmode/: datetime.rs  document.rs  headline.rs  metadata.rs  mod.rs  monitor.rs  parser.rs  planning.rs  repository.rs  timestamp.rs  title.rs  todo.rs  update.rs  utils.rs
src/lib/: OrgDocument.svelte  bindings.ts  utils.ts
src/routes/: +layout.svelte  +page.svelte  page.test.ts
test_files/: checkbox-test.org  example.org  kill-test.org  notes.org  projects.org  task-layer-test.org  tasks.org
(+115 files in other folders)
