[package]
name = "org-x"
version = "0.1.0"
description = "A Notion-like org-mode viewer"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "org_x"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "org-x"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
specta = { version = "=2.0.0-rc.22", features = ["export"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
notify = { version = "6.1.1", features = ["serde"] }
tokio = { version = "1.35.1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
] }
once_cell = "1.19.0"
orgize = "0.9.0"

[dev-dependencies]
tempfile = "3.20.0"
